--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
 
 <body class="bg-light">
 <header class="py-5 text-center">
-    <img alt="Logo" class="d-block mx-auto mb-3" src="../static/img/witch-learning.svg" width="96">
+    <img alt="Logo" class="d-block mx-auto mb-3" src="../static/img/logo.svg" width="96">
     <h1 class="h2">TodoDat</h1>
 </header>
 <main>
